# itertools

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.build  Jenkinsfile  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
benchmarks/: product_range.cpp  range.cpp
c++/itertools/: CMakeLists.txt  enumerate.hpp  iterator_facade.hpp  itertools.cpp  itertools.hpp  omp_chunk.hpp  product.hpp  range.hpp  sentinel.hpp  slice.hpp  stride.hpp  transform.hpp  utils.hpp  zip.hpp
doc/: CMakeLists.txt  ChangeLog.md  Doxyfile  Doxyfile.in  DoxygenLayout.xml  about.rst  changelog.rst  conf.py.in  documentation.md  ex1.md  examples.md  groups.dox  index.rst  install.rst  installation.md  integration.md  issues.md  issues.rst  overview.md.in
doc/_templates/: sideb.html
docs/: index.html
packaging/: CMakeLists.txt  Dockerfile.msan  TRIQS-app4triqs-3.0.0-foss-2019a-Python-3.7.2.eb  TRIQS-itertools-3.0.0-foss-2019a-Python-3.7.2.eb  app4triqs-1.2.0-foss-2021b.eb  itertools-1.2.0-foss-2021b.eb  itertools-foss-2021b.eb.in
packaging/conda/: meta.yaml  meta.yaml.in
share/: CMakeLists.txt  app4triqsvars.sh.in  itertools.modulefile.in  itertoolsvars.sh.in
share/cmake/: CMakeLists.txt  app4triqs-config.cmake.in  itertools-config.cmake.in
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  basic.cpp  itertools.cpp
test/c++/itertools/: CMakeLists.txt
